Add elasticsearch B cluster as envvar
This will enable us to have search-api talk to elasticsearch6
(currently available on integration machines).

Trello: https://trello.com/c/uTsa3fpt/745.

--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -41,6 +41,8 @@ govuk::apps::kibana::logit_environment: 2694f14b-6519-4607-81f2-8a2130e5aaec
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::publishing_api::event_log_aws_bucketname: 'govuk-publishing-api-event-log-integration'
 govuk::apps::publishing_api::content_api_prototype: true
+# TODO: move this to common, once we have ES6 in all environments
+govuk::apps::search_api::elasticsearch_b_uri: 'http://elasticsearch6'
 govuk::apps::short_url_manager::instance_name: 'integration'
 govuk::apps::signon::instance_name: 'integration'
 govuk::apps::smartanswers::expose_govspeak: true
@@ -362,7 +364,7 @@ users::usernames:
   - richardmorton
   - rochtrinque
   - rubenarakelyan
-  - samuelculley 
+  - samuelculley
   - seanrankine
   - sebastianschmieschek
   - sebastianszypowicz
