Clone host ~/.gitconfig into VM
We have instructions for doing this manually:
https://docs.publishing.service.gov.uk/manual/get-started.html\#set-your-git-username-and-email

We should remove these instructions once this is merged, as
this commit ensures you have the same gitconfig on both your host machine
and the VM.

--- a/development-vm/Vagrantfile
+++ b/development-vm/Vagrantfile
@@ -105,6 +105,8 @@ Vagrant.configure("2") do |config|
     config.vm.synced_folder "../..", "/var/govuk", :type => :nfs
   end
 
+  config.vm.provision "file", source: "~/.gitconfig", destination: "~/.gitconfig"
+
   config = common_config(config)
 
   # See Vagrantfile.localconfig.example for instructions on
