--- a/hieradata/node/ci-agent-1.ci.integration.publishing.service.gov.uk.yaml
+++ b/hieradata/node/ci-agent-1.ci.integration.publishing.service.gov.uk.yaml
@@ -1,4 +1,4 @@
 ---
-govuk_containers::elasticsearch::image_version: '6.7.2'
+govuk_containers::elasticsearch::primary::image_version: '6.7.2'
 
 mongodb::server::version: '2.4.9'
