--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -508,6 +508,7 @@ govuk::apps::govuk_crawler_worker::root_urls:
   - "https://assets.%{hiera('app_domain')}"
   - "https://www.%{hiera('app_domain')}"
 
+govuk::apps::imminence::ensure: 'absent'
 govuk::apps::imminence::mongodb_nodes:
   - 'mongo-1.backend'
   - 'mongo-2.backend'
