--- a/hieradata/node/ci-agent-8.ci.integration.publishing.service.gov.uk.yaml
+++ b/hieradata/node/ci-agent-8.ci.integration.publishing.service.gov.uk.yaml
@@ -1,3 +1,3 @@
 ---
-govuk_containers::elasticsearch::primary::ensure: 'absent'
-govuk_containers::elasticsearch::secondary::ensure: 'absent'
+govuk_containers::elasticsearch::primary::enable: false
+govuk_containers::elasticsearch::secondary::enable: false
