Make the Link Checker API absent in Carrenza Prod and Staging
The Link Checker API is now running in AWS, but still running (but
should be unused) in Carrenza Production and Carrenza Staging.

This old, unused version of the app still running in Carrenza is
potentially confusing, and consumes some resources. Therefore, this
commit makes it absent.

--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -36,6 +36,7 @@ govuk::apps::imminence::ensure: 'absent'
 govuk::apps::government-frontend::cpu_warning: 200
 govuk::apps::government-frontend::cpu_critical: 300
 govuk::apps::kibana::logit_environment: d414187a-2796-4ea7-9b9a-d40c341646d6
+govuk::apps::link_checker_api::ensure: 'absent'
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::publisher::run_fact_check_fetcher: false
 govuk::apps::publisher::fact_check_address_format: 'factcheck+staging-{id}@alphagov.co.uk'
