fix govuk_crawler threads
need to use double-quote for puppet to interpolate

--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -127,7 +127,7 @@ govuk::apps::govuk_crawler_worker::blacklist_paths:
   - '/licence-finder'
   - '/search'
 
-govuk::apps::govuk_crawler_worker::crawler_threads: 32
+govuk::apps::govuk_crawler_worker::crawler_threads: '32'
 
 govuk::apps::email_alert_service::enabled: false
 govuk::apps::email_alert_service::rabbitmq::ensure: 'absent'
