minimum fix to get deploy_node_apps to work for govuk_crawler_worker

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -103,7 +103,7 @@ node_class: &node_class
       - mapit
   mirrorer:
     apps:
-      - govuk-crawler-worker
+      - govuk_crawler_worker
   publishing_api:
     apps:
       - publishing-api
