--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -84,7 +84,7 @@ node_class: &node_class
       - mapit
   mirrorer:
     apps:
-      - govuk-crawler-worker
+      - govuk_crawler_worker
   router_backend:
     apps:
       - router-api
