Add performance_platform to AWS Smokey checks

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1151,6 +1151,8 @@ monitoring::checks::smokey::features:
     feature: mainstream_publishing_tools
   check_manuals_frontend:
     feature: manuals_frontend
+  check_performance_platform:
+    feature: performance_platform
   check_public_api:
     feature: public_api
   check_publishing_tools:
