--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -330,6 +330,77 @@ monitoring::checks::smokey::environment: 'integration'
 monitoring::uptime_collector::environment: 'integration'
 monitoring::contacts::slack_username: 'Integration'
 
+monitoring::checks::smokey::features:
+  check_ab_testing:
+    feature: ab_testing
+  check_assets:
+    feature: assets
+  check_benchmarking:
+    feature: benchmarking
+  check_caching:
+    feature: caching
+  check_calculators:
+    feature: calculators
+  check_calendars:
+    feature: calendars
+  check_collections:
+    feature: collections
+  check_contacts:
+    feature: contacts
+  check_content_data_admin:
+    feature: content_data_admin
+  check_csv_preview:
+    feature: csv_preview
+  check_data_gov_uk:
+    feature: data_gov_uk
+  check_draft_environment:
+    feature: draft_environment
+  check_email_signup:
+    feature: email_signup
+  check_feedback:
+    feature: feedback
+  check_finder_frontend:
+    feature: finder_frontend
+  check_foreign_travel_advice:
+    feature: foreign_travel_advice
+  check_frontend:
+    feature: frontend
+  check_govuk:
+    feature: govuk
+  check_govuk_redirect:
+    feature: govuk_redirect
+  check_government_frontend:
+    feature: government_frontend
+  check_info_frontend:
+    feature: info_frontend
+  check_licence_finder:
+    feature: licence_finder
+  check_licensing:
+    feature: licensing
+  check_manuals_frontend:
+    feature: manuals_frontend
+  check_mirror:
+    feature: mirror
+  check_performance_platform:
+    feature: performance_platform
+  check_public_api:
+    feature: public_api
+  check_publishing_tools:
+    feature: publishing_tools
+  check_router:
+    feature: router
+  check_search:
+    feature: search
+  check_signon:
+    feature: signon
+  check_smartanswers:
+    feature: smartanswers
+  check_transition:
+    feature: transition
+  check_waf:
+    feature: waf
+  check_whitehall:
+    feature: whitehall
 
 postfix::smarthost:
   - 'email-smtp.eu-west-1.amazonaws.com:587'
