--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1567,8 +1567,8 @@ monitoring::checks::smokey::features:
     feature: csv_preview
   check_draft_environment:
     feature: draft_environment
-  check_email_signup:
-    feature: email_signup
+  check_email_sign_up:
+    feature: email_sign_up
   check_feedback:
     feature: feedback
   check_finder_frontend:
