--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -355,8 +355,8 @@ monitoring::checks::smokey::features:
     feature: data_gov_uk
   check_draft_environment:
     feature: draft_environment
-  check_email_signup:
-    feature: email_signup
+  check_email_sign_up:
+    feature: email_sign_up
   check_feedback:
     feature: feedback
   check_finder_frontend:
